<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateUserActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_centerInParent="true"
            android:src="@drawable/oh_kasyon_splash" />

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?android:selectableItemBackgroundBorderless"
            android:padding="10dp"
            android:src="@drawable/ic_round_arrow_back_24" />

        <ImageView
            android:id="@+id/button_settings"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?android:selectableItemBackgroundBorderless"
            android:padding="15dp"
            android:src="@drawable/ic_round_settings_24"
            android:visibility="gone"/>

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/toolbar"
        android:background="@color/orange"
        android:elevation="3dp"/>

    <ScrollView
        android:layout_below="@id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/username"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/edit_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/first_name"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:padding="10dp" />


            <EditText
                android:id="@+id/edit_text_middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="10dp"
                android:hint="@string/middle_name"
                android:padding="10dp" />

            <EditText
                android:id="@+id/edit_text_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="10dp"
                android:hint="@string/last_name"
                android:padding="10dp" />


            <EditText
                android:id="@+id/edit_text_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="10dp"
                android:hint="@string/address"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:text="@string/gender"
                    android:textSize="17sp"
                    android:padding="10dp"/>

                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_background"
                    android:spinnerMode="dropdown"/>

                <View
                    android:id="@+id/gender_divider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:background="@android:color/darker_gray"/>

                <EditText
                    android:id="@+id/edit_gender_specify"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/contact_suffix_background"
                    android:visibility="gone"
                    android:hint="@string/specify"
                    android:padding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:id="@+id/contact_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/contact_no_prefix"
                    android:textColor="@color/black"
                    android:background="@drawable/contact_prefix_background"
                    android:drawablePadding="10dp"
                    android:padding="10dp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"/>

                <EditText
                    android:id="@+id/edit_text_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/contact_suffix_background"
                    android:drawablePadding="10dp"
                    android:hint="@string/contact"
                    android:padding="10dp" />

            </LinearLayout>

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_save_changes_background"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="Save Changes"
                android:textColor="@color/white"
                android:visibility="visible"/>

            <ProgressBar
                android:id="@+id/picture_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="visible"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>