<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="12dp">

        <TextView
            android:id="@+id/text_place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_place_name"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_guests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_date"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/expected_no_of_guests"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_guests"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/status"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_save_changes_background"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/profile_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:src="@drawable/arrow_white"
            app:tint="@color/blue" />

        <Button
            android:id="@+id/review_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_status"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_login_background"
            android:text="Review"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/edit_review_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_status"
            android:layout_toEndOf="@id/review_button"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_login_background"
            android:text="Edit Review"
            android:textColor="@color/white"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_date_of_reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/date"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"/>

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/light_grey" />

</RelativeLayout>