<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:fillViewport="true"
    tools:context=".LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/ohKasyonSplash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/oh_kasyon_splash"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/text_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_placeholder"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:padding="15dp"
            android:background="@drawable/alert_outline_background"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_round_error_outline_24"
            android:drawablePadding="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_black"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/button_forgot_password_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_round_arrow_back_24"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forgot Password"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_black" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="Enter Password"
            android:padding="10dp"
            android:tooltipText="Enter Password" />

        <TextView
            android:id="@+id/button_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text=" Forgot Password? Click here "
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_login_background"
            android:text="Reset Password"
            android:textColor="@color/white"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_login_background"
            android:text="@string/sign_in"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text=" Or "
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/button_sign_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_white_background"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_google_g_logo"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:clickable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_google"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:clickable="false"
                android:textAllCaps="true"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_sign_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_facebook_background"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_facebook_logo"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:clickable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_facebook"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:clickable="false"
                android:textAllCaps="true"/>

        </LinearLayout>

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sign_up_flair_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:background="@drawable/button_white_background"/>

    </LinearLayout>

</ScrollView>